# cppnbstripout

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  Test.ipynb  TestClean.ipynb  cppnbstripout.cpp  ref.ipynb  test.sh
src/: cppnbstripout.cpp  cppnbstripoutlib.cpp  cppnbstripoutlib.hpp  test_cppnbstripout.cpp
